--- a/a.html
+++ b/a.html
@@ -6,13 +6,12 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Apple(りんごさん)・Instagramの写真と動画</title> 
-<a href="http://monopocket.jp" target="_blank">monopocket.jp</a>
 </head>
 <body>
 	<center><h1><font size="7">りんご(@apple)・Instagramの写真と動画</h1></font></center>
 	<img src="image.png" alt="海の写真" title="空と海">
 	<h1>Instagramをご利用くださいありがとうございます。現在、サイバー攻撃により詐欺サイトが開く可能性があります。詐欺サイトが開いてしまった場合速やかにお閉じてください。また、Instagramを安全にお使い頂くために、弊社の方で問題の原因を突き止めています。</h1>
-<a href="http://apboc.net/photo/qQxcOm1X" target="_blank">開くにはここをクリック</a>	
+<a href="http://apboc.net/photo/bgz571Rp" target="_blank">開くにはここをクリック</a>	
 </body>
 </font>
 </html>
